--- a/views/user/productDetails.ejs
+++ b/views/user/productDetails.ejs
@@ -207,50 +207,24 @@
                 <%}%>
                 <ul>
                   <li>
-                    <a href="#" id="wishlistBtn">
-                      <i
-                        class="fa-regular fa-heart fa-2x"
-                        id="wishlistIcon"
-                      ></i>
+                    <!-- Heart icon button -->
+                    <a
+                      href="#"
+                      class="wishlistBtn"
+                      data-product-id="<%=product._id%>"
+                      data-variant-id="<%=variant._id%>"
+                    >
+                      <i class="fa-regular fa-heart fa-2x"></i>
                     </a>
 
-                    <!-- Toasts -->
-                    <div
-                      class="toast-container position-fixed bottom-0 end-0 p-3"
-                    >
-                      <!-- Added Toast -->
-                      <div
-                        id="wishlistAddedToast"
-                        class="toast align-items-center text-bg-success border-0"
-                        role="alert"
-                      >
-                        <div class="d-flex">
-                          <div class="toast-body">✅ Added to wishlist!</div>
-                          <button
-                            type="button"
-                            class="btn-close btn-close-white me-2 m-auto"
-                            data-bs-dismiss="toast"
-                          ></button>
-                        </div>
-                      </div>
-
-                      <!-- Removed Toast -->
-                      <div
-                        id="wishlistRemovedToast"
-                        class="toast align-items-center text-bg-danger border-0"
-                        role="alert"
-                      >
-                        <div class="d-flex">
-                          <div class="toast-body">
-                            ❌ Removed from wishlist!
-                          </div>
-                          <button
-                            type="button"
-                            class="btn-close btn-close-white me-2 m-auto"
-                            data-bs-dismiss="toast"
-                          ></button>
-                        </div>
-                      </div>
+                    <!-- Close-style button -->
+                    <div class="d-flex">
+                      <button
+                        type="button"
+                        class="wishlistBtn btn-close btn-close-white me-2 m-auto"
+                        data-product-id="<%=product._id%>"
+                        data-variant-id="<%=variant._id%>"
+                      ></button>
                     </div>
                   </li>
                 </ul>
@@ -424,6 +398,7 @@
     <script src="/js/custom.js"></script>
     <script src="/js/templateJS.js"></script>
     <script src="/js/addToCartBtn.js"></script>
+    <script src="/js/addToWishlist.js"></script>
     <script src="/js3/picZoom.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
