--- a/views/user/productListingPage.ejs
+++ b/views/user/productListingPage.ejs
@@ -516,20 +516,23 @@
               <% if (products && products.length > 0) { %> <%
               products.forEach(product => { %>
               <div class="col-md-4 col-sm-6">
-                <a
-                  href="/collections/<%= product._id %>?variantId=<%= product.variants[0]._id %>"
-                  class="text-decoration-none text-dark"
-                >
-                  <div class="product-card mx-4 my-2">
-                    <div class="product-image">
-                      <img
-                        src="<%= product.variants[0].variantImages[0] %>"
-                        alt="<%= product.productName %>"
-                      />
-                      <button class="wishlist-btn">
-                        <i class="fa fa-heart"></i>
-                      </button>
-                    </div>
+                <div class="product-card mx-4 my-2">
+                  <div class="product-image">
+                    <img
+                      src="<%= product.variants[0].variantImages[0] %>"
+                      alt="<%= product.productName %>"
+                    />
+                    <a
+                      href="/wishlist/add?productId=<%= product._id %>&variantId=<%= product.variants[0]._id %>"
+                      class="wishlist-btn"
+                    >
+                      <i class="fa fa-heart"></i>
+                    </a>
+                  </div>
+                  <a
+                    href="/collections/<%= product._id %>?variantId=<%= product.variants[0]._id %>"
+                    class="text-decoration-none text-dark"
+                  >
                     <div class="product-details">
                       <h4><%= product.productName %></h4>
 
@@ -543,8 +546,8 @@
                         Rs. <%= maxPrice %> <% } %>
                       </p>
                     </div>
-                  </div>
-                </a>
+                  </a>
+                </div>
               </div>
 
               <% }) %>
