--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -192,10 +192,91 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-12">
-                <label class="text-black h4" for="coupon">Coupon</label>
-                <p>Enter your coupon code if you have one.</p>
+              <div
+                class="col-md-12 d-flex justify-content-start align-items-center my-3"
+              >
+                <div>
+                  <label class="text-black h4 me-3" for="coupon">Coupons</label>
+                </div>
+                <div>
+                  <button
+                    class="btn btn-black"
+                    data-bs-toggle="modal"
+                    data-bs-target="#couponModal"
+                  >
+                    View Coupons
+                  </button>
+                </div>
+
+                <!-- COUPONS MODAL -->
+                <div
+                  class="modal fade"
+                  id="couponModal"
+                  tabindex="-1"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog modal-dialog-centered modal-lg">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title">Available Coupons</h5>
+                        <button
+                          type="button"
+                          class="btn-close"
+                          data-bs-dismiss="modal"
+                        ></button>
+                      </div>
+                      <div class="modal-body">
+                        <!-- Coupon 1 -->
+                        <%if(coupons){%>
+                        <%coupons.forEach((coupon)=>{ const isEligible = (sum >=
+                        coupon.minPurchaseAmount); %>
+                        <div
+                          class="coupon-card d-flex justify-content-between align-items-center"
+                        >
+                          <div
+                            class="bg-light my-2 d-flex justify-content-between"
+                            style="width: 2000px"
+                          >
+                            <div>
+                              <div class="coupon-code">
+                                <span class="border border-secondary p-2">
+                                  <%=coupon.couponCode%></span
+                                >
+                              </div>
+                              <div class="coupon-desc">
+                                <%=coupon.description%>
+                              </div>
+                            </div>
+                            <%if(isEligible){%>
+                            <button
+                              class="btn btn-sm btn-outline-danger copy-btn me-0"
+                              onclick="copyCode('SAVE20')"
+                            >
+                              Copy
+                            </button>
+                            <%}else{%>
+
+                            <div>
+                              <p>
+                                Minimum purcahse amount is
+                                <%=coupon.minPurchaseAmount %>
+                              </p>
+                            </div>
+
+                            <%}%>
+                          </div>
+                        </div>
+                        <%})%>
+                        <%}else{%>
+                        <div>No coupons to show...</div>
+                        <%}%>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- COUPONS MODAL -->
               </div>
+              <p>Enter your coupon code if you have one.</p>
               <div class="col-md-8 mb-3 mb-md-0">
                 <input
                   type="text"
@@ -236,11 +317,12 @@
 
                 <div class="row">
                   <div class="col-md-12">
-                    <a href="/checkout"
+                    <a
+                      href="/checkout"
                       class="btn btn-black btn-lg py-3 btn-block"
                     >
                       Proceed To Checkout
-                  </a>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -249,7 +331,7 @@
         </div>
 
         <%}else if(!cartItems){%>
-          <div></div>
+        <div></div>
         <%}%>
       </div>
     </div>
